--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,11 +22,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Senarios" asp-action="Index">Senarios</a>
 
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CropTypes" asp-action="Index">Privacy</a>
-
-                            
                         </li>
                     </ul>
                 </div>
