Rotate Climate text

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -144,7 +144,7 @@
                             </tr>
                             <tr>
                                 @*<td><label class="rotate">Climate</label></td>*@
-                                <td style="text-align:center;vertical-align: middle">Climate</td>
+                                <td style="text-align:center;vertical-align: middle" class="rotate">Climate</td>
                                 <td style="text-align: center;"><img width="50" height="50" src="https://raw.githubusercontent.com/moshiur-cegis/MetamodelTest/master/low.png" /></td>
                                 <td><img height="50" width="80" src="~/images/xy.png" /></td>
 
